--- a/feladat1.html
+++ b/feladat1.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equit="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>1. feladat</title>
 </head>
