--- a/Feladat9/feladat9.html
+++ b/Feladat9/feladat9.html
@@ -9,6 +9,9 @@
         .image-container {
             display: flex;
         }
+        table, th, td {
+            border:2px solid black;
+        }
 
     </style>
 </head>
@@ -35,18 +38,48 @@
 	<br>
 	<p>A ház lenti részén találhatóak a közös helyiségek, és két szoba. Az emeleten helyezkedik el további két szoba. Minden szobában két ágy található. Ágyneműt és törölközőt biztosítunk. Az étkezőben 8 személyes asztal áll, a konyhában 8 fő részére található étkészlet.</p>	
     <div class="image-container">
-        <div>
-            <img src="pics/haz1.jpg" width="250" height="200">
-        </div>
-        <div>  
-            <img src="pics/haz2.jpg" width="250" height="200">
-        </div>
-        <div>  
-            <img src="pics/haz3.jpg" width="250" height="200">
-        </div>
-        <div>  
-            <img src="pics/haz4.jpg" width="250" height="200">
-        </div>
+        <img src="pics/haz1.jpg" width="250" height="200">
+        <img src="pics/haz2.jpg" width="250" height="200">
+        <img src="pics/haz3.jpg" width="250" height="200">
+        <img src="pics/haz4.jpg" width="250" height="200">
     </div>
+    <br>
+        <table>
+            <tr>
+                <th style="width:30%"><b>Időtartam</b></th>
+                <th style="width:30%"><b>1-4 fő esetén</b></th>
+                <th style="width:30%"><b>5-8 fő esetén</b></th>
+            </tr>
+            <tr>
+                <th>2 éjszakára</th>
+                <th>48.000.- Ft</th>
+                <th>64.000.- Ft</th>
+            </tr>
+            <tr>
+                <th>3 éjszakára</th>
+                <th>67.500.- Ft</th>
+                <th>90.000.- Ft</th>
+            </tr>
+            <tr>
+                <th>4 éjszakára</th>
+                <th>84.000.- Ft</th>
+                <th>112.000.- Ft</th>
+            </tr>
+            <tr>
+                <th>5 éjszakára</th>
+                <th>97.500.- Ft</th>
+                <th>130.000.- Ft</th>
+            </tr>
+            <tr>
+                <th>6 éjszakára</th>
+                <th>108.000.- Ft</th>
+                <th>144.000.- Ft</th>
+            </tr>
+            <tr>
+                <th>7 éjszakára</th>
+                <th>115.500.- Ft</th>
+                <th>154.000.- Ft</th>
+            </tr>
+        </table>
 </body>
 </html>
