--- a/Dolgozat/index.html
+++ b/Dolgozat/index.html
@@ -96,5 +96,8 @@
                 <th style="height:40px">Hangkártya: On Board</th>
             </tr>
         </table>
+        <br>
+        <br>
+        <h1>Ha megtetszett a játék, akkor szerezzd be <a href="https://store.steampowered.com/app/470220/UNO/">itt!</a></h1>	
 </body>
 </html>
